# ZYZVerilog

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  build.zig  build.zig.zon  shell.nix
.cargo/: config.toml
.github/workflows/: CargoTest.yml
.zig-cache/o/207137004cb6bbc9baec8f0ce6eb42d6/: test
.zig-cache/o/29b02646bd1a1fe2daa60b668c9390a5/: test
.zig-cache/o/32a155dd55392b517d39b903d4aca0da/: test
.zig-cache/o/42e44ee0c9d0c904f562664cc7d53b02/: test
.zig-cache/o/489d0c2322e9e47f4fe91fd2467a41c1/: test
.zig-cache/o/51cdabf607356a2e172bd11ee6f432d4/: test
.zig-cache/o/5893e7d9f2daa0c4a13004e6ae27d482/: test
.zig-cache/o/6093b2dca3be2e149a91aed5f5757955/: test
.zig-cache/o/9309a290c649ff3b229fad26c8c78eb9/: test
.zig-cache/o/a7875d08bbed5cd41077895c026fac16/: ZYZVerilog
.zig-cache/o/aec33225ddcd3bd316abcd62016cd363/: test
.zig-cache/o/bd66b27200c0ba544bf288dad08bd609/: test
.zig-cache/o/bdb94799834cb562f0ee6688e654c3bf/: test
.zig-cache/o/cd4d1069e475f5c6c1ec46e66fc8159d/: test
.zig-cache/o/d0b8a9799aae17a2a5d11afcaed02d68/: test
lib/: CompilerInterface.zig
lib/Analysis/: README.md
lib/TestingInterface/: PackagedCompiler.zig  PackagedCompilerInterface.zig
lib/analysis/: Cargo.toml  build.rs
lib/lexer/: CMakeLists.txt  Cargo.toml  README.md  build.rs
lib/lexer/src/: export_bnf.rs  tokens.rs
lib/parser/: Cargo.toml  README.md  build.rs
lib/syntax-tree/: Cargo.toml  README.md  build.rs
src/: main.rs  main.zig
tests/: sv_compliance_tests.zig
